[package]
name = "rhosts"
version = "0.1.0"
edition = "2021"
authors = ["wjun <wjunjobs@outlook.com>"]
description = "加速github访问小工具"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }